examples/test/testpolicy823.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy823
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key28: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value12
          key0: value0
          key7: value5
      podSelector:
        matchLabels:
          key16: value44
          key34: value44
